# exam-os

./: CMakeLists.txt  README.md  config_local.cfg  loop_tester.sh
include/: shmpidefs.h  shmpiinit.h
src/: main.cpp  shmpiinit.cpp
test_programs/: main_loop.cpp
